# openbp

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
examples/notebooks/: 01_cutting_stock_bp.ipynb  02_vehicle_routing_bp.ipynb  03_crew_pairing_bp.ipynb
openbp/: __init__.py
openbp/_core/: __init__.py
openbp/applications/: __init__.py  crew_pairing.py  cutting_stock.py  set_partitioning.py  vrptw.py  vrptw_bpc.py
openbp/branching/: __init__.py  arc.py  base.py  ryan_foster.py  strong.py  variable.py
openbp/core/: __init__.py  node.py  selection.py  tree.py
openbp/selection/: __init__.py
openbp/solver/: __init__.py  branch_and_price.py
scripts/: batch_compare_vrptw.py  benchmark_vibe_master.py  check_flight855_source.py  compare_vrptw_highs.py  diagnose.py  diagnose_air15.py  diagnose_connection_gap.py  diagnose_duty_days.py  diagnose_resource_constraints.py  diagnose_uncovered.py  diagnose_uncovered_detail.py  run_crew_pairing_bp.py  run_vrptw_bp.py  run_vrptw_bpc.py  test_specific_path.py  verify_full_path.py
src/bindings/: module.cpp  node_bindings.cpp  selection_bindings.cpp  tree_bindings.cpp
src/core/: node.hpp  node_pool.hpp  selection.hpp  tree.hpp
tests/cpp/: test_node.cpp  test_tree.cpp
tests/unit/: __init__.py  test_branching.py  test_node.py  test_selection.py  test_tree.py
