[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "openbp"
version = "0.1.0"
description = "Open-Source Branch-and-Price Framework for Operations Research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenBP Contributors"}
]
keywords = [
    "branch-and-price",
    "column-generation",
    "operations-research",
    "optimization",
    "integer-programming",
    "vehicle-routing",
    "crew-scheduling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    # NOTE: OpenCG must be installed manually from https://github.com/miladbarooni/opencg
    # pip install -e ../opencg  (before installing openbp)
    # The 'opencg' package on PyPI is NOT the same project.
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.5",
]
full = [
    "openbp[dev,notebooks]",
    "pandas>=1.5",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/miladbarooni/openbp"
Documentation = "https://openbp.readthedocs.io"
Repository = "https://github.com/miladbarooni/openbp"
Issues = "https://github.com/miladbarooni/openbp/issues"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.packages = ["openbp"]
build-dir = "build/{wheel_tag}"

cmake.args = [
    "-DBUILD_TESTS=OFF",
    "-DBUILD_BENCHMARKS=OFF",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
